--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@types/socket.io": "^2.1.11",
     "express": "^4.17.1",
     "firebase": "^7.0.0 || ^8.0.0",
     "rxjs": "~6.5.4",
