finished createGame and joinGame functions

--- a/angular.json
+++ b/angular.json
@@ -131,5 +131,8 @@
       }
     }
   },
-  "defaultProject": "battleship"
+  "defaultProject": "battleship",
+  "cli": {
+    "analytics": false
+  }
 }
