--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@types/socket.io": "^2.1.11",
+    "bad-words": "^3.0.4",
     "express": "^4.17.1",
     "firebase": "^7.0.0 || ^8.0.0",
+    "nodemon": "^2.0.6",
     "rxjs": "~6.5.4",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
